added embedded image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 <body>
     
+    <!--h1 tag-->
     <h1>This is a Website</h1>
+
+    <!--embedded image-->
+    <a href="https://www.sciencemag.org/sites/default/files/styles/article_main_large/public/dogs_1280p_0.jpg?itok=cnRk0HYq">
 </body>
 </html>
