added target blank link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <h1>This is a Website</h1>
 
     <!--embedded image-->
-    <a href="https://www.sciencemag.org/sites/default/files/styles/article_main_large/public/dogs_1280p_0.jpg?itok=cnRk0HYq">
+    <img src="https://www.sciencemag.org/sites/default/files/styles/article_main_large/public/dogs_1280p_0.jpg?itok=cnRk0HYq">
+
+    <!--blank link-->
+    <a target="_blank" href="https://en.wikipedia.org/wiki/Dog">Wiki dog page</a>
+    
+
 </body>
 </html>
