added blod and # link

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <h1>This is a Website</h1>
 
     <!--embedded image-->
-    <img src="https://www.sciencemag.org/sites/default/files/styles/article_main_large/public/dogs_1280p_0.jpg?itok=cnRk0HYq">
+    <img width="200px" src="https://www.sciencemag.org/sites/default/files/styles/article_main_large/public/dogs_1280p_0.jpg?itok=cnRk0HYq">
 
     <!--blank link-->
     <a target="_blank" href="https://en.wikipedia.org/wiki/Dog">Wiki dog page</a>
-    
 
+    <!--bold link-->
+    <strong><a href="https://www.petfinder.com/dog-breeds/">petfinder.com</a></strong>
+
+    <!--# link-->
+    <a href="#dogs.com">link doesn't go anywhere</a>
 </body>
 </html>
