--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!--embedded image-->
     <img width="200px" src="https://www.sciencemag.org/sites/default/files/styles/article_main_large/public/dogs_1280p_0.jpg?itok=cnRk0HYq">
 
+    <br>
+
     <!--blank link-->
     <a target="_blank" href="https://en.wikipedia.org/wiki/Dog">Wiki dog page</a>
 
@@ -22,5 +24,26 @@
 
     <!--# link-->
     <a href="#dogs.com">link doesn't go anywhere</a>
+
+    <br>
+
+    <!--ordered list-->
+    <ol>
+        <li>Get 2 slices of bread</li>
+        <li>Slather peanut butter on one side and jelly on the other piece of bread</li>
+        <li>Put bread together</li>
+    </ol>
+
+    <br>
+
+    <!--unordered list-->
+    <ul>
+        <li>KLove</li>
+        <li>Rex Orange County</li>
+        <li>Khalid</li>
+        <li>King Princess</li>
+        <li>Zahavia Ward</li>
+    </ul>
+    
 </body>
 </html>
